--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
   margin: 0;
   box-sizing: border-box;
 }
-
-.footer-left {
-  background-color: hsl(192, 100%, 9%);
+footer >img{
+  width: 100%;
+  margin-bottom: -5px;
 }
-footer-sec{
-    background-color: aquamarine;
+
+.footer-sec{
+  background-color: hsl(192, 100%, 9%);
 }
