--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ header > nav {
   cursor: pointer;
   font-size: 1em;
 }
+.try-btn:hover{
+  color: hsl(321, 100%, 78%);
+  border: 1px solid hsl(321, 100%, 78%);
+}
 footer > img {
   width: 100%;
   margin-bottom: -5px;
@@ -66,6 +70,9 @@ header div p {
   box-shadow: 0px 1px 5px rgb(73, 72, 72);
   cursor: pointer;
 }
+.start-btn:hover{
+  background-color: hsl(321, 100%, 78%);
+}
 /* ----------------------------main---------------------- */
 main {
   margin: 20px 132px;
@@ -90,9 +97,14 @@ main > img,
   margin: 14rem auto;
 }
 .sec0 h1 {
-  font-size: 4.6rem;
+  font-size: 5rem;
   margin-bottom: 0.5rem;
   font-family: "Open Sans", sans-serif;
+}
+.sec0 p {
+  color: hsl(207, 4%, 50%);
+  font-size: 1.2em;
+  text-align: center;
 }
 
 .statistic img {
@@ -103,20 +115,19 @@ main > img,
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
-.sec-text h3{
+.sec-text h3 {
   font-size: 2.7rem;
   margin-bottom: 1rem;
 }
-.lastSec{
+.lastSec {
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   margin: 10rem auto;
 }
-.lastSec h3{
+.lastSec h3 {
   font-size: 2.7rem;
 }
 /* ---------------------------footer----------------- */
@@ -127,14 +138,74 @@ footer {
 .footer-sec {
   background-color: hsl(192, 100%, 9%);
   display: flex;
-  padding: 8rem 5rem;
-
+  padding: 8rem 8rem;
+  display: flex;
+  justify-content: space-between;
 }
-.footer-left > img{
-  color: aliceblue
-  ;
-
+.footer-left {
+  width: 30%;
 }
-.footer-sec > div{
+.footer-left p{
+  line-height: 1.75rem;
+}
+.footer-right {
   width: 40%;
+}
+.footer-left > img {
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg)
+    brightness(103%) contrast(103%);
+    margin-bottom: 1.5rem;
+}
+.footer-left div > img {
+  margin-right: 1.2rem;
+}
+.phone,
+.email,
+.social {
+  display: flex;
+  flex-direction: row;
+  margin: 1.5rem 0;
+}
+
+.social>a {
+  margin: 3rem 1.2rem 0 0;
+} 
+/* --------------FOOTER RIGHT----------- */
+.footer-right h3{
+  font-size: 1.7em;
+  margin: 1.5rem 0;
+}
+.footer-right p{
+  margin: 1.5rem 0;
+  width: 70%;
+  line-height: 1.75rem;
+}
+
+form{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
+}
+
+form input{
+  width: 65%;
+  height: 50px;
+  border-radius: .5rem;
+
+}
+form div{
+  height: 50px;
+  line-height: 50px;
+  width: 30%;
+  text-align: center;
+  background-color: hsl(322, 100%, 66%);
+  color: white;
+  border-radius: .5rem;
+  font-size: 1em;
+  box-shadow: 0px 1px 5px rgb(73, 72, 72);
+  cursor: pointer;
+}
+
+form div:hover{
+  background-color: hsl(321, 100%, 78%);
 }
