--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: hsl(192, 100%, 9%);
+  width: 100vw !important;
 }
 /* -------------------public style---------- */
 /* input, button, submit { }  */
@@ -48,8 +49,9 @@ header > div {
   align-items: center;
 }
 header div h1 {
-  font-size: 3rem;
-  padding: 30px 0;
+  font-size: 3em;
+  padding: 30px;
+  text-align: center;
 }
 header div p {
   width: 40%;
@@ -75,18 +77,18 @@ header div p {
 }
 /* ----------------------------main---------------------- */
 main {
-  margin: 20px 132px;
+  margin: 20px auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100vw;
 }
-main > img,
-.sec0 {
-  justify-content: center;
-  margin: auto;
+
+.mobile-monitor{
   width: 80%;
 }
+
 .sec0,
 .sec1,
 .sec2,
@@ -94,7 +96,11 @@ main > img,
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 14rem auto;
+  padding: 0 10%;
+  width: 100%;
+}
+.sec0{
+  padding: 0 15%;
 }
 .sec0 h1 {
   font-size: 5rem;
@@ -107,17 +113,17 @@ main > img,
   text-align: center;
 }
 
-.statistic div img {
+.sec-img {
   width: 40%;
 }
 .sec-text {
   width: 40%;
   display: flex;
-  flex-direction: column;
+  flex-flow: column wrap;
   justify-content: center;
 }
 .sec-text h3 {
-  font-size: 2.7rem;
+  font-size: 2.5rem;
   margin-bottom: 1rem;
 }
 .lastSec {
@@ -131,14 +137,22 @@ main > img,
   font-size: 2.7rem;
 }
 /* ------pattern----- */
+.col {
+  margin: 6rem auto;
+  width: 100%;
+}
 .pattern-top-desktop,
 .pattern-bottom-desktop {
   display: block;
-  width: 100vw;
+  width: 100%;
 }
 .pattern-top-mobile,
 .pattern-bottom-mobile {
   display: none;
+}
+.full-back{
+  width: 100%;
+  background-color: #F6FBFF;
 }
 
 /* ---------------------------footer----------------- */
