--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header > nav {
   cursor: pointer;
   font-size: 1em;
 }
-.try-btn:hover{
+.try-btn:hover {
   color: hsl(321, 100%, 78%);
   border: 1px solid hsl(321, 100%, 78%);
 }
@@ -72,7 +72,7 @@ header div p {
   box-shadow: 0px 1px 5px rgb(73, 72, 72);
   cursor: pointer;
 }
-.start-btn:hover{
+.start-btn:hover {
   background-color: hsl(321, 100%, 78%);
 }
 /* ----------------------------main---------------------- */
@@ -85,7 +85,7 @@ main {
   width: 100vw;
 }
 
-.mobile-monitor{
+.mobile-monitor {
   width: 80%;
 }
 
@@ -99,7 +99,7 @@ main {
   padding: 0 10%;
   width: 100%;
 }
-.sec0{
+.sec0 {
   padding: 0 15%;
 }
 .sec0 h1 {
@@ -150,9 +150,9 @@ main {
 .pattern-bottom-mobile {
   display: none;
 }
-.full-back{
+.full-back {
   width: 100%;
-  background-color: #F6FBFF;
+  background-color: #f6fbff;
 }
 
 /* ---------------------------footer----------------- */
@@ -170,7 +170,7 @@ footer {
 .footer-left {
   width: 30%;
 }
-.footer-left p{
+.footer-left p {
   line-height: 1.75rem;
 }
 .footer-right {
@@ -179,7 +179,7 @@ footer {
 .footer-left > img {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg)
     brightness(103%) contrast(103%);
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .footer-left div > img {
   margin-right: 1.2rem;
@@ -194,57 +194,133 @@ footer {
   margin: 1.5rem 0;
 }
 
-.social>a {
+.social > a {
   margin: 3rem 1.2rem 0 0;
-} 
+}
 
-.media-icons i , .fa {
+.media-icons i,
+.fa {
   color: white !important;
   font-size: 40px !important;
 }
-.media-icons i:hover , .fa:hover{
+.media-icons i:hover,
+.fa:hover {
   color: rgb(52, 204, 250);
 }
 
-
 /* --------------FOOTER RIGHT----------- */
-.footer-right h3{
+.footer-right h3 {
   font-size: 1.7em;
   margin: 1.5rem 0;
 }
-.footer-right p{
+.footer-right p {
   margin: 1.5rem 0;
   width: 70%;
   line-height: 1.75rem;
 }
 
-form{
+form {
   display: flex;
   justify-content: space-between;
   margin-top: 3rem;
 }
 
-form input{
+form input {
   width: 65%;
   height: 50px;
-  border-radius: .5rem;
-
+  border-radius: 0.5rem;
 }
-form div{
+form div {
   height: 50px;
   line-height: 50px;
   width: 30%;
   text-align: center;
   background-color: hsl(322, 100%, 66%);
   color: white;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   font-size: 1em;
   box-shadow: 0px 1px 5px rgb(73, 72, 72);
   cursor: pointer;
 }
 
-form div:hover{
+form div:hover {
   background-color: hsl(321, 100%, 78%);
 }
 
-/* ---------------------- */
+/* -------------------responsive--------------- */
+@media only screen and (max-width: 750px) {
+  body {
+    font-size: 1rem;
+  }
+  header h1{
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.5rem !important;
+  }
+  main h1 {
+    font-size: 3.5rem !important;
+  }
+  nav img {
+    width: 75%;
+  }
+  header div p {
+    width: 80%;
+  }
+  .start-btn {
+    width: 70%;
+  }
+  .sec0,
+  .sec1,
+  .sec2,
+  .sec3 {
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+  }
+  .sec0 > div {
+    margin: 30px auto;
+  }
+
+  .sec-text,
+  .sec-img {
+    width: 90%;
+    margin: 15px auto;
+  }
+  .col {
+    margin: 100px auto;
+  }
+  .pattern-top-desktop,
+  .pattern-bottom-desktop {
+    display: none;
+  }
+  .pattern-top-mobile,
+  .pattern-bottom-mobile {
+    display: block;
+    width: 100%;
+  }
+  .footer-sec {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 5rem;
+    justify-content: space-between;
+  }
+  .footer-left,
+  .footer-right {
+    width: 100%;
+    margin: 70px auto;
+  }
+  footer form {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+  }
+  form input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  bottom{
+    overflow: auto;
+  }
+}
+
